productions/agentkit-cli/archives/0.46.6/zh/commands/skill.mdx
---
title: "管理平台技能"
en_link: "/productions/agentkit-cli/archives/0.46.6/en/commands/skill"
---

`skill` 命令组用于管理 AgentKit 技能平台上的技能：列出、查看详情、查看版本、查看技能空间，以及删除技能。

## skill list

列出技能。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `-p, --project <name>` | 项目名称 | default |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill list
```

## skill show

查看某个技能的详情。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<id>` | 技能 ID（必填） | 无 |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill show sk-xxxxxxxx
```

## skill versions

列出某个技能的版本。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<id>` | 技能 ID（必填） | 无 |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill versions sk-xxxxxxxx
```

## skill spaces

列出技能空间。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill spaces
```

## skill delete

删除一个技能。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<id>` | 技能 ID（必填） | 无 |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `-y, --yes` | 跳过确认提示 | `false` |

```bash lines
agentkit skill delete sk-xxxxxxxx --yes
```
