productions/agentkit-cli/archives/0.52.8/zh/commands/skill.mdx
---
title: "管理平台技能与本地技能包"
en_link: "/productions/agentkit-cli/archives/0.52.8/en/commands/skill"
---

`skill` 命令组用于管理 AgentKit 技能平台上的技能：列出、查看详情、查看版本、查看技能空间，以及删除技能。`skills` 命令组用于处理本地 AgentKit 技能包，当前提供批量生成安全壳 Skill 的能力。

## 命令总览

| 命令 | 说明 |
| --- | --- |
| `skill list` | 列出平台技能。 |
| `skill show` | 查看技能详情。 |
| `skill versions` | 列出技能版本。 |
| `skill spaces` | 列出技能空间。 |
| `skill delete` | 删除平台技能。 |
| `skills secure` | 从本地技能目录生成安全壳 Skill。 |

## skill list

列出技能。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `-p, --project <name>` | 项目名称 | default |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill list
```

## skill show

查看某个技能的详情。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<id>` | 技能 ID（必填） | 无 |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill show sk-xxxxxxxx
```

## skill versions

列出某个技能的版本。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<id>` | 技能 ID（必填） | 无 |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill versions sk-xxxxxxxx
```

## skill spaces

列出技能空间。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `--json` | 输出原始 JSON | `false` |

```bash lines
agentkit skill spaces
```

## skill delete

删除一个技能。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<id>` | 技能 ID（必填） | 无 |
| `-r, --region <region>` | Volcengine 区域 | 无 |
| `-y, --yes` | 跳过确认提示 | `false` |

```bash lines
agentkit skill delete sk-xxxxxxxx --yes
```

## skills secure

从本地技能目录批量生成安全壳 Skill。源目录应包含一个或多个子目录，每个子目录内有 `SKILL.md`，且 frontmatter 至少包含 `name` 与 `description`。命令会为每个技能生成同名输出目录，并只保留面向托管智能体安装的调用说明，不复制真实 Skill 的 Prompt、references、scripts、依赖或凭证。

| 标志/参数 | 说明 | 默认值 |
| --- | --- | --- |
| `<sourceSkillsDir>` | 本地技能根目录，下面的每个技能子目录都应包含 `SKILL.md`。 | 必填 |
| `-o, --output <dir>` | 输出目录。 | 源目录同级的 `<sourceSkillsDir>-secure` |
| `--force` | 覆盖已经存在的生成文件。 | `false` |
| `--json` | 输出原始 JSON。 | `false` |

```bash lines
agentkit skills secure ./skills

agentkit skills secure ./skills --output ./skills-secure --force
```

生成结果适用于只需要提交任务、轮询进度并展示结果的托管智能体。真实 Skill 的执行仍发生在 AgentKit Skill Sandbox 中。
